# hpy-zig-archive

./: .gitignore  LICENSE  README.md  build.zig  dev-requirements.txt  noxfile.py  pyproject.toml  pyzig.py  requirements.txt
dev/: .gitignore  translate_hpy_files.py
dev/c_files/: members.c  trampolines.c
examples/: setup.py
examples/src/: .gitignore  pof.zig  quickstart.zig
examples/tests/: test_quickstart.py
pyzig/: build.py  buildhpy.py  buildpythonh.py  setuptools_integration.py
src/: .gitignore  build.py  build_hpy_files.py  build_hpy_universal.py  config.zig  def.zig  ffi.zig  helpers.zig  hpy.zig  hpy_cimport.zig  hpy_old.zig  quickstart_c.zig  runtime.zig  test.zig
src/runtime/: argparse.zig  buildvalue.zig  format.zig  inline_helpers.zig  structseq.zig
test/: .gdbinit  .gitignore  conftest.py  lldb-py.test  support.py  test_00_basic.py
testing/: .pytest.ini  ext_build.sh  noxfile.py  setup.py
testing/c/: setup.py  sum.c
testing/c_zig/: setup.py
testing/hpy_zig/src/: hpy.c  pyzig.zig  quickstart.zig
testing/src/: ffi.zig  helper_functions.zig  helpers.zig  hpy.zig  pof_c.zig  quickstart.c  quickstart.py  quickstart.zig  quickstart_c.zig  quickstart_c_translated.zig
testing/tests/: test_pof.py  test_quickstart.py
tests/: test_pyzig.py
tests/test_src/c/: sum.c
tests/test_src/hpy_zig/: .gitignore  build.zig  quickstart.c  setup.py
tests/test_src/hpy_zig/src/: hpy_universal.zig  main.zig  quickstart.c  quickstart.zig
tests/test_src/zig/: setup.py
