[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'pyzig'
version = "0.0.2a"
authors = [
  { name="february cozzocrea", email="february.cozzocrea@gmail.com"}
]
description = "Build Python extensions with the Zig language"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: Implementation :: CPython',
]


[project.urls]
"Homepage" = "https://github.com/f-cozzocrea/pyzig"
"Bug Tracker" = "https://github.com/f-cozzocrea/pyzig/issues"


##[options.entry_points]
##distutils.setup_keywords =
##  build_zig = setuptools_zig.setup_build_zig

